--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,2 +1,15 @@
 @import "open-props/src/index.css";
 @import "open-props/src/extra/normalize.css";
+
+@import "https://cdn.skypack.dev/ol/ol.css";
+
+html, body {
+  margin: 0;
+  height: 100%;
+}
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
